--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: bizcru <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/28 15:47:58 by bizcru            #+#    #+#              #
-#    Updated: 2024/12/11 23:56:10 by bizcru           ###   ########.fr        #
+#    Updated: 2025/12/04 20:48:41 by becanals         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
